--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Eric Zanchi",
   "license": "MPL-2.0",
   "dependencies": {
+    "dexie": "^1.5.1",
     "express": "^4.14.0",
     "vue": "^2.1.6",
     "vue-material": "^0.5.1"
