--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "dexie": "^1.5.1",
     "express": "^4.14.0",
+    "serve-favicon": "^2.3.2",
     "vue": "^2.1.6",
     "vue-material": "^0.5.1"
   },
