--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express": "^4.14.0",
     "serve-favicon": "^2.3.2",
     "vue": "^2.1.8",
-    "vue-material": "^0.5.1"
+    "vue-material": "^0.5.1",
+    "vue-template-compiler": "^2.1.8"
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
@@ -28,7 +29,6 @@
     "gulp-webpack": "^1.5.0",
     "pump": "^1.0.2",
     "vue-loader": "^10.0.2",
-    "vue-template-compiler": "^2.1.6",
     "webpack": "^1.14.0"
   }
 }
