--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "dexie": "^1.5.1",
     "express": "^4.14.0",
+    "file-saver": "^1.3.3",
     "serve-favicon": "^2.3.2",
     "vue": "^2.2.4",
     "vue-material": "^0.7.1",
