--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dexie": "^1.5.1",
     "express": "^4.14.0",
     "file-saver": "^1.3.3",
+    "moment": "^2.18.0",
     "serve-favicon": "^2.3.2",
     "vue": "^2.2.4",
     "vue-material": "^0.7.1",
