--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Web app for recording audio",
   "main": "app.js",
   "scripts": {
+    "dev": "nodemon --exec yarn run start",
+    "prestart": "webpack",
+    "start": "node ./app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Eric Zanchi",
@@ -27,10 +30,7 @@
     "babel-preset-es2015": "^6.18.0",
     "css-loader": "^0.26.1",
     "flow-bin": "^0.37.4",
-    "gulp": "^3.9.1",
-    "gulp-nodemon": "^2.2.1",
-    "gulp-sass": "^3.0.0",
-    "pump": "^1.0.2",
+    "nodemon": "^1.11.0",
     "vue-loader": "^10.0.2",
     "webpack": "^2.2.1"
   }
