--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "Eric Zanchi",
   "license": "MPL-2.0",
   "dependencies": {
+    "babel-plugin-transform-async-to-generator": "^6.22.0",
+    "babel-polyfill": "^6.23.0",
     "dexie": "^1.5.1",
     "express": "^4.14.0",
     "file-saver": "^1.3.3",
