--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   },
   "devDependencies": {
     "eslint": "^4.17.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-vue": "^4.2.2",
     "parcel-bundler": "^1.5.1",
     "parcel-plugin-vue": "^1.5.0"
   },
   "dependencies": {
     "babel-preset-env": "^1.6.1",
+    "dexie": "^2.0.1",
     "vue": "^2.5.13",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
