Added babel plugin for object spread

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "parcel -p 3000 ./src/index.html"
   },
   "devDependencies": {
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "eslint": "^4.17.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
