--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,10 @@
 {
+  "plugins": ["transform-object-rest-spread"],
   "presets": [
-    "env"
-  ]
+      [ "env", {
+        "targets": {
+          "browsers": "last 1 Firefox versions"
+        }
+      }]
+    ]
 }
