--- a/.eslintrc
+++ b/.eslintrc
@@ -2,5 +2,8 @@
   "extends": [
     "airbnb-base",
     "plugin:vue/strongly-recommended"
-  ]
+  ],
+  "parserOptions": {
+    "ecmaVersion": 8
+  }
 }
