Added more exceptions to config

--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,9 @@
     "ecmaVersion": 8
   },
   "rules": {
-    "no-confusing-arrow": 0
+    "arrow-parens": 0,
+    "function-paren-newline": 0,  
+    "no-confusing-arrow": 0,
+    "no-return-assign": 0
   }
 }
