--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "start": "parcel -p 3000 ./src/index.html"
   },
   "lint-staged": {
-    "*.js": ["eslint --fix", "git add"]
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ]
   },
   "devDependencies": {
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
@@ -27,7 +30,9 @@
   },
   "dependencies": {
     "babel-preset-env": "^1.6.1",
+    "date-fns": "^1.29.0",
     "dexie": "^2.0.1",
+    "pretty-ms": "^3.1.0",
     "vue": "^2.5.13",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
