--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "eslint-plugin-vue": "^4.2.2",
     "husky": "^0.14.3",
     "lint-staged": "^6.1.0",
-    "parcel-bundler": "^1.6.1",
-    "parcel-plugin-vue": "^1.5.0"
+    "parcel-bundler": "^1.7.0",
+    "vue-template-compiler": "^2.5.16"
   },
   "dependencies": {
     "babel-preset-env": "^1.6.1",
