--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "preact": "^10.5.15"
+    "date-fns": "^2.28.0",
+    "preact": "^10.5.15",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.1.5",
+    "@types/uuid": "^8.3.4",
     "typescript": "^4.5.4",
     "vite": "^2.8.0"
   },
