--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "author": "Zanchi <zanchi@hey.com> (https://github.com/zanchi)",
   "engines": {
-    "node": "16.14.2"
+    "node": "14.x"
   },
   "scripts": {
     "dev": "vite",
