--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@preact/preset-vite": "^2.1.5",
     "@types/uuid": "^8.3.4",
+    "sass": "^1.49.9",
     "typescript": "^4.5.4",
     "vite": "^2.8.0"
   },
