--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   },
   "dependencies": {
     "date-fns": "^2.28.0",
+    "dexie": "^3.2.1",
     "preact": "^10.5.15",
+    "use-dexie": "^1.2.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
