--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cassiozen/usestatemachine": "^1.0.1",
     "date-fns": "^2.28.0",
     "dexie": "^3.2.1",
     "preact": "^10.5.15",
