--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "@cassiozen/usestatemachine": "^1.0.1",
     "date-fns": "^2.28.0",
     "dexie": "^3.2.1",
+    "dexie-react-hooks": "^1.1.1",
     "preact": "^10.5.15",
-    "use-dexie": "^1.2.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
