--- a/package.json
+++ b/package.json
@@ -16,12 +16,11 @@
     "date-fns": "^2.28.0",
     "dexie": "^3.2.1",
     "dexie-react-hooks": "^1.1.1",
-    "preact": "^10.5.15",
-    "uuid": "^8.3.2"
+    "nanoid": "^3.3.2",
+    "preact": "^10.5.15"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.1.5",
-    "@types/uuid": "^8.3.4",
     "sass": "^1.49.9",
     "typescript": "^4.5.4",
     "vite": "^2.8.0"
