--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@cassiozen/usestatemachine": "^1.0.1",
+    "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
     "dexie": "^3.2.1",
     "dexie-react-hooks": "^1.1.1",
