use react-spring for slide animation
you just can't beat springs,
they look the most natural of any timing function.
react-spring weighs in at 19.2kB min/gzipped.
this commit pulls the record button into its own component.
also adds react-reduce-motion to disable animations
if the user has indicated they prefer reduced motion.
accessibility is important :)

--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "dexie": "^3.2.1",
     "dexie-react-hooks": "^1.1.1",
     "nanoid": "^3.3.2",
-    "preact": "^10.5.15"
+    "preact": "^10.5.15",
+    "react-reduce-motion": "^2.0.2",
+    "react-spring": "^9.4.4"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.1.5",
